Remove valueOf jdk1.5 method
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/trunk@264748 13f79535-47bb-0310-9956-ffa450edef68